fotorelacjonusz (2.5.1)

  * Made Debian package

 -- Kamil Ostaszewski <fotorelacjonusz@k14.vdl.pl>
